# FastAPI-To_Do

./: README.md  config.py  main.py  pyproject.toml  requirments.txt
apps/: forms.py  models.py  schemas.py
apps/routers/: auth.py  todo.py
apps/services/: auth.py
apps/utilis/: send_email.py  token.py
templates/: index.html
templates/auth/: signin.html  signup.html
